squash! - work in progress - querybyv1request
